src/sfx/SFXParser.ts
// Generated from ../../grammar/SFX.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SFXListener } from "./SFXListener";
import { SFXVisitor } from "./SFXVisitor";


export class SFXParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly GLSL = 8;
	public static readonly SFX_FILE = 9;
	public static readonly SFX_INCLUDE = 10;
	public static readonly SFX_TECHNIQUE = 11;
	public static readonly SFX_LBRACE = 12;
	public static readonly SFX_RBRACE = 13;
	public static readonly SFX_VS = 14;
	public static readonly SFX_PS = 15;
	public static readonly SFX_PIPELINE = 16;
	public static readonly SFX_PROPERTY = 17;
	public static readonly SFX_PIPE_PROP = 18;
	public static readonly SFX_SEMANTIC_TYPE = 19;
	public static readonly SFX_EXT = 20;
	public static readonly SFX_SEMANTIC = 21;
	public static readonly SFX_IDENTIFIER = 22;
	public static readonly COMMENT = 23;
	public static readonly WS = 24;
	public static readonly EOL = 25;
	public static readonly RULE_file_name = 0;
	public static readonly RULE_file_folder = 1;
	public static readonly RULE_file_path = 2;
	public static readonly RULE_stat_file = 3;
	public static readonly RULE_stat_include_base = 4;
	public static readonly RULE_stat_include_lib = 5;
	public static readonly RULE_stat_include = 6;
	public static readonly RULE_stat_includes = 7;
	public static readonly RULE_teq_stat_vs = 8;
	public static readonly RULE_teq_stat_ps = 9;
	public static readonly RULE_pipe_expr = 10;
	public static readonly RULE_pipe_exprs = 11;
	public static readonly RULE_pipe_stat = 12;
	public static readonly RULE_pipe_body = 13;
	public static readonly RULE_teq_stat_pipeline = 14;
	public static readonly RULE_prop_dec = 15;
	public static readonly RULE_prop_body = 16;
	public static readonly RULE_teq_stat_prop = 17;
	public static readonly RULE_teq_stat = 18;
	public static readonly RULE_teq_body = 19;
	public static readonly RULE_teq_def = 20;
	public static readonly RULE_teq_defines = 21;
	public static readonly RULE_program_stat = 22;
	public static readonly RULE_program_stats = 23;
	public static readonly RULE_program = 24;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file_name", "file_folder", "file_path", "stat_file", "stat_include_base", 
		"stat_include_lib", "stat_include", "stat_includes", "teq_stat_vs", "teq_stat_ps", 
		"pipe_expr", "pipe_exprs", "pipe_stat", "pipe_body", "teq_stat_pipeline", 
		"prop_dec", "prop_body", "teq_stat_prop", "teq_stat", "teq_body", "teq_def", 
		"teq_defines", "program_stat", "program_stats", "program",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'/'", "'\"'", "'<'", "'>'", "':'", "';'", "','", undefined, 
		"'#file'", "'#include'", "'technique'", "'{'", "'}'", "'vs'", "'ps'", 
		"'pipeline'", "'property'", undefined, undefined, "'.sfx'", undefined, 
		undefined, undefined, undefined, "'\n'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "GLSL", "SFX_FILE", "SFX_INCLUDE", "SFX_TECHNIQUE", "SFX_LBRACE", 
		"SFX_RBRACE", "SFX_VS", "SFX_PS", "SFX_PIPELINE", "SFX_PROPERTY", "SFX_PIPE_PROP", 
		"SFX_SEMANTIC_TYPE", "SFX_EXT", "SFX_SEMANTIC", "SFX_IDENTIFIER", "COMMENT", 
		"WS", "EOL",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SFXParser._LITERAL_NAMES, SFXParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SFXParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SFX.g4"; }

	// @Override
	public get ruleNames(): string[] { return SFXParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SFXParser._serializedATN; }


	   ignoreNewLine:boolean = true;

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SFXParser._ATN, this);
	}
	// @RuleVersion(0)
	public file_name(): File_nameContext {
		let _localctx: File_nameContext = new File_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SFXParser.RULE_file_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 50;
			this.match(SFXParser.SFX_IDENTIFIER);
			this.state = 51;
			this.match(SFXParser.SFX_EXT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public file_folder(): File_folderContext {
		let _localctx: File_folderContext = new File_folderContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SFXParser.RULE_file_folder);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 53;
			this.match(SFXParser.SFX_IDENTIFIER);
			this.state = 54;
			this.match(SFXParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public file_path(): File_pathContext {
		let _localctx: File_pathContext = new File_pathContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SFXParser.RULE_file_path);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 57;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 56;
					this.file_folder();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 59;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			this.state = 61;
			this.file_name();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat_file(): Stat_fileContext {
		let _localctx: Stat_fileContext = new Stat_fileContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SFXParser.RULE_stat_file);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			 this.ignoreNewLine = false; 
			this.state = 64;
			this.match(SFXParser.SFX_FILE);
			this.state = 65;
			this.file_name();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat_include_base(): Stat_include_baseContext {
		let _localctx: Stat_include_baseContext = new Stat_include_baseContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SFXParser.RULE_stat_include_base);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			 this.ignoreNewLine = false; 
			this.state = 68;
			this.match(SFXParser.SFX_INCLUDE);
			this.state = 69;
			this.match(SFXParser.T__1);
			this.state = 70;
			this.file_name();
			this.state = 71;
			this.match(SFXParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat_include_lib(): Stat_include_libContext {
		let _localctx: Stat_include_libContext = new Stat_include_libContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SFXParser.RULE_stat_include_lib);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			 this.ignoreNewLine = false; 
			this.state = 74;
			this.match(SFXParser.SFX_INCLUDE);
			this.state = 75;
			this.match(SFXParser.T__2);
			this.state = 76;
			this.file_path();
			this.state = 77;
			this.match(SFXParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat_include(): Stat_includeContext {
		let _localctx: Stat_includeContext = new Stat_includeContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SFXParser.RULE_stat_include);
		try {
			this.state = 81;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 79;
				this.stat_include_lib();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 80;
				this.stat_include_base();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat_includes(): Stat_includesContext {
		let _localctx: Stat_includesContext = new Stat_includesContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SFXParser.RULE_stat_includes);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 84;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 83;
					this.stat_include();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 86;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_stat_vs(): Teq_stat_vsContext {
		let _localctx: Teq_stat_vsContext = new Teq_stat_vsContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SFXParser.RULE_teq_stat_vs);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			 this.ignoreNewLine = false;
			this.state = 89;
			this.match(SFXParser.SFX_VS);
			this.state = 90;
			this.match(SFXParser.T__4);
			this.state = 91;
			this.match(SFXParser.SFX_IDENTIFIER);
			this.state = 92;
			this.match(SFXParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_stat_ps(): Teq_stat_psContext {
		let _localctx: Teq_stat_psContext = new Teq_stat_psContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SFXParser.RULE_teq_stat_ps);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			 this.ignoreNewLine = false;
			this.state = 95;
			this.match(SFXParser.SFX_PS);
			this.state = 96;
			this.match(SFXParser.T__4);
			this.state = 97;
			this.match(SFXParser.SFX_IDENTIFIER);
			this.state = 98;
			this.match(SFXParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pipe_expr(): Pipe_exprContext {
		let _localctx: Pipe_exprContext = new Pipe_exprContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, SFXParser.RULE_pipe_expr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(SFXParser.SFX_IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pipe_exprs(): Pipe_exprsContext {
		let _localctx: Pipe_exprsContext = new Pipe_exprsContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, SFXParser.RULE_pipe_exprs);
		try {
			this.state = 107;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 102;
				this.pipe_expr();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 103;
				this.pipe_expr();
				this.state = 104;
				this.match(SFXParser.T__6);
				this.state = 105;
				this.pipe_exprs();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pipe_stat(): Pipe_statContext {
		let _localctx: Pipe_statContext = new Pipe_statContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, SFXParser.RULE_pipe_stat);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(SFXParser.SFX_PIPE_PROP);
			this.state = 110;
			this.match(SFXParser.T__4);
			this.state = 111;
			this.pipe_exprs();
			this.state = 112;
			this.match(SFXParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pipe_body(): Pipe_bodyContext {
		let _localctx: Pipe_bodyContext = new Pipe_bodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, SFXParser.RULE_pipe_body);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 114;
				this.pipe_stat();
				}
				}
				this.state = 117;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SFXParser.SFX_PIPE_PROP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_stat_pipeline(): Teq_stat_pipelineContext {
		let _localctx: Teq_stat_pipelineContext = new Teq_stat_pipelineContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, SFXParser.RULE_teq_stat_pipeline);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this.match(SFXParser.SFX_PIPELINE);
			this.state = 120;
			this.match(SFXParser.T__4);
			this.state = 121;
			this.match(SFXParser.SFX_LBRACE);
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SFXParser.SFX_PIPE_PROP) {
				{
				this.state = 122;
				this.pipe_body();
				}
			}

			this.state = 125;
			this.match(SFXParser.SFX_RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public prop_dec(): Prop_decContext {
		let _localctx: Prop_decContext = new Prop_decContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, SFXParser.RULE_prop_dec);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(SFXParser.SFX_SEMANTIC);
			this.state = 128;
			this.match(SFXParser.T__4);
			this.state = 129;
			this.match(SFXParser.SFX_IDENTIFIER);
			this.state = 130;
			this.match(SFXParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public prop_body(): Prop_bodyContext {
		let _localctx: Prop_bodyContext = new Prop_bodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, SFXParser.RULE_prop_body);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 132;
				this.prop_dec();
				}
				}
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SFXParser.SFX_SEMANTIC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_stat_prop(): Teq_stat_propContext {
		let _localctx: Teq_stat_propContext = new Teq_stat_propContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, SFXParser.RULE_teq_stat_prop);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(SFXParser.SFX_PROPERTY);
			this.state = 138;
			this.match(SFXParser.T__4);
			this.state = 139;
			this.match(SFXParser.SFX_LBRACE);
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SFXParser.SFX_SEMANTIC) {
				{
				this.state = 140;
				this.prop_body();
				}
			}

			this.state = 143;
			this.match(SFXParser.SFX_RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_stat(): Teq_statContext {
		let _localctx: Teq_statContext = new Teq_statContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, SFXParser.RULE_teq_stat);
		try {
			this.state = 149;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SFXParser.SFX_VS:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 145;
				this.teq_stat_vs();
				}
				break;
			case SFXParser.SFX_PS:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 146;
				this.teq_stat_ps();
				}
				break;
			case SFXParser.SFX_PIPELINE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 147;
				this.teq_stat_pipeline();
				}
				break;
			case SFXParser.SFX_PROPERTY:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 148;
				this.teq_stat_prop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_body(): Teq_bodyContext {
		let _localctx: Teq_bodyContext = new Teq_bodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, SFXParser.RULE_teq_body);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 152;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 151;
				this.teq_stat();
				}
				}
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SFXParser.SFX_VS) | (1 << SFXParser.SFX_PS) | (1 << SFXParser.SFX_PIPELINE) | (1 << SFXParser.SFX_PROPERTY))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_def(): Teq_defContext {
		let _localctx: Teq_defContext = new Teq_defContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, SFXParser.RULE_teq_def);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.match(SFXParser.SFX_TECHNIQUE);
			this.state = 157;
			this.match(SFXParser.SFX_IDENTIFIER);
			this.state = 158;
			this.match(SFXParser.SFX_LBRACE);
			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SFXParser.SFX_VS) | (1 << SFXParser.SFX_PS) | (1 << SFXParser.SFX_PIPELINE) | (1 << SFXParser.SFX_PROPERTY))) !== 0)) {
				{
				this.state = 159;
				this.teq_body();
				}
			}

			this.state = 162;
			this.match(SFXParser.SFX_RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public teq_defines(): Teq_definesContext {
		let _localctx: Teq_definesContext = new Teq_definesContext(this._ctx, this.state);
		this.enterRule(_localctx, 42, SFXParser.RULE_teq_defines);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 165;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 164;
					this.teq_def();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 167;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public program_stat(): Program_statContext {
		let _localctx: Program_statContext = new Program_statContext(this._ctx, this.state);
		this.enterRule(_localctx, 44, SFXParser.RULE_program_stat);
		try {
			this.state = 172;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SFXParser.SFX_INCLUDE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 169;
				this.stat_includes();
				}
				break;
			case SFXParser.SFX_TECHNIQUE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 170;
				this.teq_defines();
				}
				break;
			case SFXParser.GLSL:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 171;
				this.match(SFXParser.GLSL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public program_stats(): Program_statsContext {
		let _localctx: Program_statsContext = new Program_statsContext(this._ctx, this.state);
		this.enterRule(_localctx, 46, SFXParser.RULE_program_stats);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 177;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SFXParser.GLSL) | (1 << SFXParser.SFX_INCLUDE) | (1 << SFXParser.SFX_TECHNIQUE))) !== 0)) {
				{
				{
				this.state = 174;
				this.program_stat();
				}
				}
				this.state = 179;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 48, SFXParser.RULE_program);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.stat_file();
			this.state = 181;
			this.program_stats();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!SFXParser.__ATN) {
			SFXParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(SFXParser._serializedATN));
		}

		return SFXParser.__ATN;
	}

}

export class File_nameContext extends ParserRuleContext {
	public SFX_IDENTIFIER(): TerminalNode { return this.getToken(SFXParser.SFX_IDENTIFIER, 0); }
	public SFX_EXT(): TerminalNode { return this.getToken(SFXParser.SFX_EXT, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SFXParser.RULE_file_name; }
	// @Override
	public enterRule(listener: SFXListener): void {
		if (listener.enterFile_name) {
			listener.enterFile_name(this);
		}
	}
	// @Override
	public exitRule(listener: SFXListener): void {
		if (listener.exitFile_name) {
			listener.exitFile_name(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SFXVisitor<Result>): Result {
		if (visitor.visitFile_name) {
			return visitor.visitFile_name(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

